--- a/Summaries/Yuval/ML/MLSummary.lyx
+++ b/Summaries/Yuval/ML/MLSummary.lyx
@@ -136,6 +136,30 @@ Tom Mitchell - A computer program is said to learn from experience
 
 \end_layout
 
+\begin_layout Subsection
+Distribution-Free Learning
+\end_layout
+
+\begin_layout Standard
+In this approach we do not impose any assumptions on the underlying distribution
+ over the data.
+ we follow a discriminative approach in which our goal is not to learn the
+ underlying distribution but rather to learn an accurate predictor.
+ of course if we could learn the underlying distribution, we would use the
+ bayes optimal predictor to generate predictions.
+\end_layout
+
+\begin_layout Subsection
+Parametric Density Estimation
+\end_layout
+
+\begin_layout Standard
+In this approach we assume that the data's distribution belongs to a specific
+ family and we do not know the parameters.
+ we try to estimate those parameters and make predictions using the bayes
+ predictor.
+\end_layout
+
 \begin_layout Part
 Learning
 \end_layout
