--- a/Summaries/Yuval/ML/MLSummary.lyx
+++ b/Summaries/Yuval/ML/MLSummary.lyx
@@ -137,7 +137,7 @@ Tom Mitchell - A computer program is said to learn from experience
 \end_layout
 
 \begin_layout Subsection
-Distribution-Free Learning
+Distribution-Free Learning (Discriminative)
 \end_layout
 
 \begin_layout Standard
@@ -150,7 +150,7 @@ In this approach we do not impose any assumptions on the underlying distribution
 \end_layout
 
 \begin_layout Subsection
-Parametric Density Estimation
+Parametric Density Estimation (Generative)
 \end_layout
 
 \begin_layout Standard
@@ -787,31 +787,55 @@ A hypothesis class
 \begin_inset Formula $H$
 \end_inset
 
- is PAC learnable if there exists a function 
+ is PAC learnable if there exists:
+\end_layout
+
+\begin_layout Enumerate
+A sample complexity function 
 \begin_inset Formula $m_{H}:(0,1)^{2}\rightarrow\mathbb{N}$
 \end_inset
 
-, a learning algorithm 
-\begin_inset Formula $A$
+
+\end_layout
+
+\begin_layout Enumerate
+A learning algorithm 
+\begin_inset Formula $\mathbb{A}$
 \end_inset
 
-, an unknown distribution 
+
+\end_layout
+
+\begin_layout Enumerate
+An unknown data generation distribution 
 \begin_inset Formula $\mathbb{D}$
 \end_inset
 
- and a realizable true labeling function 
+
+\end_layout
+
+\begin_layout Enumerate
+A labeling fuction 
 \begin_inset Formula $f:X\rightarrow Y$
 \end_inset
 
- and an I.I.D sample space 
+
+\end_layout
+
+\begin_layout Enumerate
+An Independent Identically Distributed sample space 
 \begin_inset Formula $S$
 \end_inset
 
- such that:
+
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $\forall\epsilon,\delta\in(0,1)\forall\mathbb{D}:\left|S\right|>m_{H}(\epsilon,\delta)\rightarrow\mathbb{P}\big[L_{(\mathbb{D},f)}(A(S))\leq\epsilon\big]>1-\delta$
+Such that :
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\forall\epsilon,\delta\in(0,1),\forall\mathbb{D}:\left|S\right|>m_{H}(\epsilon,\delta)\rightarrow\mathbb{P}\big[L_{(\mathbb{D},f)}(\mathbb{A}(S))\leq\epsilon\big]>1-\delta$
 \end_inset
 
 
@@ -826,26 +850,46 @@ A hypothesis class
 \begin_inset Formula $H$
 \end_inset
 
- is agnostic PAC learnable if there exists a function 
+ is agnostic PAC learnable if there exists
+\end_layout
+
+\begin_layout Enumerate
+A sample complexity function 
 \begin_inset Formula $m_{H}:(0,1)^{2}\rightarrow\mathbb{N}$
 \end_inset
 
-, a learning algorithm 
-\begin_inset Formula $A$
+
+\end_layout
+
+\begin_layout Enumerate
+A learning algorithm 
+\begin_inset Formula $\mathbb{A}$
 \end_inset
 
-, an unknown distribution 
-\begin_inset Formula $\mathbb{D}_{(x,y)}$
+
+\end_layout
+
+\begin_layout Enumerate
+An unknown data and label generating distribution 
+\begin_inset Formula $\mathbb{D}_{(X,Y)}$
 \end_inset
 
- and an I.I.D Sample Space 
+
+\end_layout
+
+\begin_layout Enumerate
+An Independent Identically Distributed sample space 
 \begin_inset Formula $S$
 \end_inset
 
- such that:
+
 \end_layout
 
 \begin_layout Standard
+Such that :
+\end_layout
+
+\begin_layout Itemize
 \begin_inset Formula $\forall\epsilon,\delta\in(0,1)\forall\mathbb{D}:\left|S\right|>m_{H}(\epsilon,\delta)\rightarrow\mathbb{P}\big[L_{\mathbb{D}}(A(S))\leq min_{h\in H}\big[L_{\mathbb{D}}(h)\big]+\epsilon\big]>1-\delta$
 \end_inset
 
@@ -1165,8 +1209,8 @@ Learner's Success -
 \begin_inset Formula $m_{H}(\epsilon,\delta)$
 \end_inset
 
- - function that returns the number of I.I.D samples required to learn a predictor
- with accuracy 
+ - function that returns the minimal number of I.I.D samples required to learn
+ a predictor with accuracy 
 \begin_inset Formula $\epsilon$
 \end_inset
 
